0.10.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.sphere_transport.viz.Viz.rst.txt
polaris.tasks.ocean.sphere\_transport.viz.Viz
=============================================

.. currentmodule:: polaris.tasks.ocean.sphere_transport.viz

.. autoclass:: Viz

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Viz.__init__
      ~Viz.add_dependency
      ~Viz.add_input_file
      ~Viz.add_output_file
      ~Viz.check_properties
      ~Viz.constrain_resources
      ~Viz.map_from_native_model_vars
      ~Viz.map_to_native_model_vars
      ~Viz.open_model_dataset
      ~Viz.process_inputs_and_outputs
      ~Viz.run
      ~Viz.runtime_setup
      ~Viz.set_resources
      ~Viz.set_shared_config
      ~Viz.setup
      ~Viz.validate_baselines
      ~Viz.write_model_dataset
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Viz.component
   
   